--- a/bbb.artnet.node/package.json
+++ b/bbb.artnet.node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bbb.artnet.node",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "bbb.artnet.node.mjs",
   "scripts": {
@@ -11,7 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "@2bit/osc": "^0.0.7",
-    "@types/node": "^20.12.8",
     "dmxnet": "^0.9.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.8"
   }
 }
