--- a/bbb.artnet.node/package.json
+++ b/bbb.artnet.node/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@2bit/osc": "^0.0.7",
-    "dmxnet": "^0.9.0"
+    "dmxnet": "github:2bbb/dmxnet#dev/error_handling"
   },
   "devDependencies": {
     "@types/node": "^20.12.8"
